--- a/resume_devops/index.html
+++ b/resume_devops/index.html
@@ -33,13 +33,56 @@
                     <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/databricks-161B22?logo=databricks" alt="" /></a>
+                    <a href="#"><img
+                            src="https://img.shields.io/badge/microsoft%20sql%20server-161B22?logo=microsoft%20sql%20server"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View
                             Github</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p><img src="/resume_devops/images/etl.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+            </section>
+            <section>
+                <h3><b>Streamlining Collaboration with GoFex Sharepoint Integration on Azure</b></h3>
+                <p>
+                    The business was facing challenges with a manual approach to uploading files to SharePoint, causing
+                    delays and errors in the process and impacting the overall efficiency and effectiveness of their
+                    file management system. I assisted them by designing and implementing an on-prem to SharePoint
+                    integration with a fully automated workflow, creating a connection between the on-prem file system
+                    and SharePoint and automating the process of uploading files, including setting up triggers and
+                    schedules, error handling and reporting mechanisms, and creating a user-friendly interface. The
+                    implementation of this solution resulted in improved efficiency, effectiveness of the file
+                    management system, reduced the need for manual effort, improved the accuracy and timeliness of the
+                    file upload process and provided valuable insights into the file management process.
+                </p>
+                <p>
+                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img
+                            src="https://img.shields.io/badge/microsoftsharepoint-161B22?logo=microsoftsharepoint"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
+
+                </p>
+                <p>
+                    <a href="https://github.com/lyoh001/AzureGoFex"><b>View
+                            Github</b></a>
+                </p>
+                <p><img src="/resume_devops/images/gofex.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -60,9 +103,15 @@
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/opencv-161B22?logo=opencv" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
+
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureLMS"><b>View
@@ -72,54 +121,23 @@
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
-                <h3><b>Streamlining Collaboration with GoFex Sharepoint Integration on Azure</b></h3>
-                <p>
-                    The business was facing challenges with a manual approach to uploading files to SharePoint, causing
-                    delays and errors in the process and impacting the overall efficiency and effectiveness of their
-                    file management system. I assisted them by designing and implementing an on-prem to SharePoint
-                    integration with a fully automated workflow, creating a connection between the on-prem file system
-                    and SharePoint and automating the process of uploading files, including setting up triggers and
-                    schedules, error handling and reporting mechanisms, and creating a user-friendly interface. The
-                    implementation of this solution resulted in improved efficiency, effectiveness of the file
-                    management system, reduced the need for manual effort, improved the accuracy and timeliness of the
-                    file upload process and provided valuable insights into the file management process.
-                </p>
-                <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
-                </p>
-                <p>
-                    <a href="https://github.com/lyoh001/AzureGoFex"><b>View
-                            Github</b></a>
-                </p>
-                <p><img src="/resume_devops/images/gofex.png"
-                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
-            </section>
-            <section>
                 <h3><b>Azure Onboarding System with a New Landing Zone</b></h3>
                 <p>
                     The business faced a challenge with their manual approach to creating new Azure subscriptions,
                     assigning policies, and linking them to the billing system. To address this, an automated onboarding
                     workflow was implemented using Infrastructure as Code and Azure Function Automation. The new
-                    solution resulted in a 70% reduction in onboarding time, 90% reduction in errors, improved customer
+                    solution resulted in a 90% reduction in onboarding time, 99% reduction in errors, improved customer
                     satisfaction and reduced operational costs. Overall, it was a successful implementation that
                     improved the overall onboarding process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/tensorflow-161B22?logo=tensorflow" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/sklearn-161B22?logo=scikit-learn" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureOnboard"><b>View
@@ -134,16 +152,18 @@
                     The business was facing a challenge with their manual approach to extract Role-Based Access Control
                     (RBAC) reports for over 100 Azure subscriptions. To address this, an automated RBAC management
                     workflow was implemented using Azure Automation and built-in RBAC functionality. This resulted in
-                    80% reduction in report extraction time, 90% reduction in errors, improved security, compliance and
+                    90% reduction in report extraction time, 95% reduction in errors, improved security, compliance and
                     reduced operational costs. Overall, it was a successful implementation that improved the overall
                     RBAC management process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureRBAC"><b>View Github</b></a>
@@ -158,16 +178,18 @@
                     The business was facing a challenge with their manual approach to monitor resources for over 100
                     Azure subscriptions. To address this, an automated real-time resource monitoring workflow was
                     implemented using Azure Monitor, Azure Automation, Azure Log Analytics and Azure Alerts. This
-                    resulted in 70% reduction in identifying and addressing issues, 90% reduction in errors, improved
+                    resulted in 90% reduction in identifying and addressing issues, 90% reduction in errors, improved
                     resource utilization and reduced operational costs. Overall, it was a successful implementation that
                     improved the overall resource monitoring process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureMonitor"><b>View Github</b></a>
@@ -190,10 +212,12 @@
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/mysql-161B22?logo=mysql" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/azure_functions-161B22?logo=azure-functions"
+                            alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureBill"><b>View Github</b></a>
@@ -209,12 +233,10 @@
                     actions CICD pipeline.
                 </p>
                 <p>
-                    <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/jupyter-161B22?logo=jupyter" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/pandas-161B22?logo=pandas" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/numpy-161B22?logo=numpy" alt="" /></a>
                     <a href="#"><img src="https://img.shields.io/badge/azure-161B22?logo=microsoftazure" alt="" /></a>
-                    <a href="#"><img src="https://img.shields.io/badge/powerbi-161B22?logo=powerbi" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/github-161B22?logo=github" alt="" /></a>
+                    <a href="#"><img src="https://img.shields.io/badge/githubactions-161B22?logo=githubactions"
+                            alt="" /></a>
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureBicep"><b>View Github</b></a>
