--- a/resume_mlops/index.html
+++ b/resume_mlops/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link href="styles.css" rel="stylesheet">
+    <link href="/resume_mlops/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>John Yohan Lee</title>
 </head>
@@ -66,7 +66,8 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/lstm.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p><img src="/resume_mlops/images/lstm.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>CNN: A Machine Learning Approach for Identifying Coffee Plant Diseases</b></h3>
@@ -89,7 +90,8 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p><img src="/resume_mlops/images/cnn.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ANN: Unveiling Telecommunication Hidden Insights with Machine Learning</b></h3>
@@ -123,7 +125,8 @@
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/ann.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p><img src="/resume_mlops/images/ann.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>MLOps: Machine Learning for Maternal Risk</b></h3>
@@ -154,7 +157,8 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
-                <p><img src="images/swa.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
+                <p><img src="/resume_mlops/images/swa.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
                 <h3><b>ETL: An Analysis of Azure IaaS for Savings</b></h3>
@@ -189,7 +193,8 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
                 </p>
-                <p><img src="images/etl.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
+                <p><img src="/resume_mlops/images/etl.png"
+                        style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
             <section>
