--- a/resume_devops/index.html
+++ b/resume_devops/index.html
@@ -22,8 +22,8 @@
                     Designed and developed an Azure ETL data pipeline that extracts data daily from various sources,
                     performs transformations using Azure Data Factory, Databricks, and Data Lake. This implementation
                     resulted in efficiency gains for OS licensing, reduced manual efforts, and valuable insights.
-                    Futhermore trained and deployed a cost-saving ML model using LSTM, TensorFlow, Scikit Learn, Pandas,
-                    NumPy, Matplotlib, and Seaborn, saving over $500k per year.
+                    Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow, Scikit Learn,
+                    Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -55,15 +55,11 @@
             <section>
                 <h3><b>Streamlining Collaboration with GoFex Sharepoint Integration on Azure</b></h3>
                 <p>
-                    The business was facing challenges with a manual approach to uploading files to SharePoint, causing
-                    delays and errors in the process and impacting the overall efficiency and effectiveness of their
-                    file management system. I assisted them by designing and implementing an on-prem to SharePoint
-                    integration with a fully automated workflow, creating a connection between the on-prem file system
-                    and SharePoint and automating the process of uploading files, including setting up triggers and
-                    schedules, error handling and reporting mechanisms, and creating a user-friendly interface. The
-                    implementation of this solution resulted in improved efficiency, effectiveness of the file
-                    management system, reduced the need for manual effort, improved the accuracy and timeliness of the
-                    file upload process and provided valuable insights into the file management process.
+                    Assisted a business in resolving challenges related to manual file uploads to SharePoint. Designed
+                    and implemented an on-prem to SharePoint integration with a fully automated workflow, including
+                    triggers, schedules, error handling, and reporting mechanisms. Significantly improved efficiency and
+                    effectiveness of the file management system, reducing manual effort while enhancing accuracy and
+                    timeliness of file uploads. Generated valuable insights into the file management process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -88,17 +84,9 @@
             <section>
                 <h3><b>Analyzing and Streamlining LMS Automation in Azure</b></h3>
                 <p>
-                    The business was facing challenges with a malfunctioning script for extracting tables from email and
-                    sending them to the vendor via FTP for their Learning Management System (LMS). The script was
-                    causing delays and errors in the data transfer process and impacting the overall efficiency and
-                    effectiveness of the LMS. I performed a root cause analysis using Pandas and PowerBI dashboard,
-                    queried 4 years worth of log records, and identified patterns and anomalies in the data that were
-                    indicative of the failure. Based on the findings, I provided a brand new cloud-native solution for
-                    business continuity, built using modern cloud technologies such as microservice and serverless to
-                    ensure scalability, high availability, and resilience. The implementation of this solution resulted
-                    in improved efficiency and effectiveness of the LMS, reduced delays and errors in the data transfer
-                    process, provided valuable insights into the data transfer process, and prevented similar failures
-                    from occurring in the future.
+                    Resolved business challenges by identifying and addressing root causes of data transfer failures.
+                    Implemented a cloud-native solution using microservice and serverless architecture, which improved
+                    efficiency and effectiveness of the LMS, reduced delays and errors, and provided valuable insights.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -123,12 +111,11 @@
             <section>
                 <h3><b>Azure Onboarding System with a New Landing Zone</b></h3>
                 <p>
-                    The business faced a challenge with their manual approach to creating new Azure subscriptions,
-                    assigning policies, and linking them to the billing system. To address this, an automated onboarding
-                    workflow was implemented using Infrastructure as Code and Azure Function Automation. The new
-                    solution resulted in a 90% reduction in onboarding time, 99% reduction in errors, improved customer
-                    satisfaction and reduced operational costs. Overall, it was a successful implementation that
-                    improved the overall onboarding process.
+                    Designed and developed an automated onboarding workflow for Azure subscriptions, policies, and
+                    billing system integration, replacing the manual approach. Leveraged Infrastructure as Code and
+                    Azure Function Automation to streamline the process. Achieved significant improvements in the
+                    onboarding process, including a 90% reduction in onboarding time and a 99% reduction in errors.
+                    These enhancements led to improved customer satisfaction and reduced operational costs.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -149,12 +136,12 @@
             <section>
                 <h3><b>Streamlining RBAC Security Management in Azure</b></h3>
                 <p>
-                    The business was facing a challenge with their manual approach to extract Role-Based Access Control
-                    (RBAC) reports for over 100 Azure subscriptions. To address this, an automated RBAC management
-                    workflow was implemented using Azure Automation and built-in RBAC functionality. This resulted in
-                    90% reduction in report extraction time, 95% reduction in errors, improved security, compliance and
-                    reduced operational costs. Overall, it was a successful implementation that improved the overall
-                    RBAC management process.
+                    Designed and developed an automated RBAC management workflow for extracting Role-Based Access
+                    Control (RBAC) reports across 100+ Azure subscriptions, replacing the manual approach. Leveraged
+                    Azure Automation and built-in RBAC functionality to streamline the process. Achieved significant
+                    improvements in RBAC management, including a 90% reduction in report extraction time and a 95%
+                    reduction in errors. These enhancements resulted in improved security, compliance, and reduced
+                    operational costs.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -175,12 +162,12 @@
             <section>
                 <h3><b>Monitoring and Alerting in Azure</b></h3>
                 <p>
-                    The business was facing a challenge with their manual approach to monitor resources for over 100
-                    Azure subscriptions. To address this, an automated real-time resource monitoring workflow was
-                    implemented using Azure Monitor, Azure Automation, Azure Log Analytics and Azure Alerts. This
-                    resulted in 90% reduction in identifying and addressing issues, 90% reduction in errors, improved
-                    resource utilization and reduced operational costs. Overall, it was a successful implementation that
-                    improved the overall resource monitoring process.
+                    Designed and developed an automated real-time resource monitoring workflow for over 100 Azure
+                    subscriptions, replacing the manual approach. Leveraged Azure Monitor, Azure Automation, Azure Log
+                    Analytics, and Azure Alerts to streamline the process. Achieved significant improvements in resource
+                    monitoring, including a 90% reduction in issue identification and resolution time, as well as a 90%
+                    reduction in errors. These enhancements led to improved resource utilization and reduced operational
+                    costs.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -201,14 +188,11 @@
             <section>
                 <h3><b>An Analysis of Azure Monthly Billing and Strategies for Savings</b></h3>
                 <p>
-                    The business faced challenges in generating invoices for customers on time and accurately, causing
-                    delays, customer frustration and manual efforts to resolve errors. I implemented a fully automated
-                    Azure monthly billing system using Python, Pandas, Seaborn, and Azure Functions. The system
-                    extracted and analyzed data from Azure Billing APIs, used Python and Pandas for data manipulation
-                    and Seaborn for data visualization. Azure Functions automated the process, ensured timely and
-                    accurate invoicing and provided valuable insights. The solution resulted in significant cost
-                    savings, improved customer satisfaction, reduced manual efforts and provided valuable insights to
-                    identify and address any issues in the data.
+                    Resolved challenges related to generating timely and accurate customer invoices by implementing a
+                    fully automated Azure monthly billing system. Leveraged Python, Pandas, Seaborn, and Azure Functions
+                    to develop the solution. Achieved significant cost savings, improved customer satisfaction, and
+                    reduced manual efforts through the implementation of the automated Azure billing system. The
+                    solution also provided valuable insights for identifying and addressing any data-related issues.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
