--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link href="/resume_devops/styles.css" rel="stylesheet">
+    <link href="/devopsportfolio/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>John Yohan Lee</title>
 </head>
@@ -49,7 +49,7 @@
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View
                             Github</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
-                <p><img src="/resume_devops/images/etl.png"
+                <p><img src="/devopsportfolio/images/etl.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -78,7 +78,7 @@
                     <a href="https://github.com/lyoh001/AzureGoFex"><b>View
                             Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/gofex.png"
+                <p><img src="/devopsportfolio/images/gofex.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -105,7 +105,7 @@
                     <a href="https://github.com/lyoh001/AzureLMS"><b>View
                             Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/lms.png"
+                <p><img src="/devopsportfolio/images/lms.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -130,7 +130,7 @@
                     <a href="https://github.com/lyoh001/AzureOnboard"><b>View
                             Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/policy.png"
+                <p><img src="/devopsportfolio/images/policy.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -155,7 +155,7 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureRBAC"><b>View Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/rbac.png"
+                <p><img src="/devopsportfolio/images/rbac.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -181,7 +181,7 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureMonitor"><b>View Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/monitor.png"
+                <p><img src="/devopsportfolio/images/monitor.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -206,7 +206,7 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureBill"><b>View Github</b></a>
                 </p>
-                <p><img src="/resume_devops/images/bill.png"
+                <p><img src="/devopsportfolio/images/bill.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
@@ -233,7 +233,7 @@
         <ul class="social">
             <li><a href="https://github.com/lyoh001"><i class="fab fa-github"></i></a></li>
             <li><a href="https://linkedin.com/in/lyoh001"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://www.lyoh001.com/resume_devops"><i class="fa fa-home"></i></a></li>
+            <li><a href="https://www.lyoh001.com/devopsportfolio"><i class="fa fa-home"></i></a></li>
             <li><a href="mailto:lyoh001@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul>
     </footer>
