--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link href="/resume_mlops/styles.css" rel="stylesheet">
+    <link href="/mlportfolio/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>John Yohan Lee</title>
 </head>
@@ -66,7 +66,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
-                <p><img src="/resume_mlops/images/lstm.png"
+                <p><img src="/mlportfolio/images/lstm.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -90,7 +90,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
                 </p>
-                <p><img src="/resume_mlops/images/cnn.png"
+                <p><img src="/mlportfolio/images/cnn.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -125,7 +125,7 @@
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
-                <p><img src="/resume_mlops/images/ann.png"
+                <p><img src="/mlportfolio/images/ann.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -157,7 +157,7 @@
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
                             Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
-                <p><img src="/resume_mlops/images/swa.png"
+                <p><img src="/mlportfolio/images/swa.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
             <section>
@@ -193,7 +193,7 @@
                 <p>
                     <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
                 </p>
-                <p><img src="/resume_mlops/images/etl.png"
+                <p><img src="/mlportfolio/images/etl.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
             </section>
