--- a/devopsportfolio/index.html
+++ b/devopsportfolio/index.html
@@ -21,7 +21,7 @@
                 <p>
                     Designed and developed an Azure ETL data pipeline that extracts data daily from various sources,
                     performs transformations using Azure Data Factory, Databricks, and Data Lake. This implementation
-                    resulted in efficiency gains for OS licensing, reduced manual efforts, and valuable insights.
+                    resulted in efficiency gains for OS licensing, reduced manual efforts by 20%, and valuable insights.
                     Furthermore, trained and deployed a cost-saving ML model using LSTM, TensorFlow, Scikit Learn,
                     Pandas, NumPy, Matplotlib, and Seaborn, saving over $500k per year.
                 </p>
@@ -58,8 +58,8 @@
                     Assisted a business in resolving challenges related to manual file uploads to SharePoint. Designed
                     and implemented an on-prem to SharePoint integration with a fully automated workflow, including
                     triggers, schedules, error handling, and reporting mechanisms. Significantly improved efficiency and
-                    effectiveness of the file management system, reducing manual effort while enhancing accuracy and
-                    timeliness of file uploads. Generated valuable insights into the file management process.
+                    effectiveness of the file management system, reducing manual effort by 50% while enhancing accuracy
+                    and timeliness of file uploads. Generated valuable insights into the file management process.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -86,7 +86,8 @@
                 <p>
                     Resolved business challenges by identifying and addressing root causes of data transfer failures.
                     Implemented a cloud-native solution using microservice and serverless architecture, which improved
-                    efficiency and effectiveness of the LMS, reduced delays and errors, and provided valuable insights.
+                    efficiency and effectiveness of the LMS, reduced delays and errors by 80%, and provided valuable
+                    insights.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -115,7 +116,7 @@
                     billing system integration, replacing the manual approach. Leveraged Infrastructure as Code and
                     Azure Function Automation to streamline the process. Achieved significant improvements in the
                     onboarding process, including a 90% reduction in onboarding time and a 99% reduction in errors.
-                    These enhancements led to improved customer satisfaction and reduced operational costs.
+                    These enhancements led to improved customer satisfaction and reduced operational costs by 10%.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -141,7 +142,7 @@
                     Azure Automation and built-in RBAC functionality to streamline the process. Achieved significant
                     improvements in RBAC management, including a 90% reduction in report extraction time and a 95%
                     reduction in errors. These enhancements resulted in improved security, compliance, and reduced
-                    operational costs.
+                    operational costs by 5%.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -165,9 +166,9 @@
                     Designed and developed an automated real-time resource monitoring workflow for over 100 Azure
                     subscriptions, replacing the manual approach. Leveraged Azure Monitor, Azure Automation, Azure Log
                     Analytics, and Azure Alerts to streamline the process. Achieved significant improvements in resource
-                    monitoring, including a 90% reduction in issue identification and resolution time, as well as a 90%
+                    monitoring, including a 90% reduction in issue identification and resolution time, as well as a 95%
                     reduction in errors. These enhancements led to improved resource utilization and reduced operational
-                    costs.
+                    costs by 10%.
                 </p>
                 <p>
                     <a href="#"><img src="https://img.shields.io/badge/python-161B22?logo=python" alt="" /></a>
@@ -190,8 +191,8 @@
                 <p>
                     Resolved challenges related to generating timely and accurate customer invoices by implementing a
                     fully automated Azure monthly billing system. Leveraged Python, Pandas, Seaborn, and Azure Functions
-                    to develop the solution. Achieved significant cost savings, improved customer satisfaction, and
-                    reduced manual efforts through the implementation of the automated Azure billing system. The
+                    to develop the solution. Achieved significant cost savings, improved customer satisfaction by 90%,
+                    and reduced manual efforts through the implementation of the automated Azure billing system. The
                     solution also provided valuable insights for identifying and addressing any data-related issues.
                 </p>
                 <p>
