--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlhatespeech/notebook/notebook.ipynb"><b>View
-                            Code</b></a>
+                            Notebook</b></a>
                 </p>
             </section>
             <section>
@@ -64,7 +64,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/lstm.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
@@ -87,7 +87,8 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View
+                            Demo</b></a>
                 </p>
                 <p><img src="images/cnn.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
@@ -121,7 +122,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/ann.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
@@ -152,7 +153,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
                 <p><img src="images/swa.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
             </section>
@@ -187,7 +188,7 @@
                 </p>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
+                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View GitHub</b></a>
                 </p>
                 <p><img src="images/etl.png" style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
                 </p>
@@ -212,7 +213,7 @@
                             alt="" /></a>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureSecurityScore"><b>View Code</b></a>
+                    <a href="https://github.com/lyoh001/AzureSecurityScore"><b>View GitHub</b></a>
                 </p>
             </section>
         </article>
