--- a/mlportfolio/index.html
+++ b/mlportfolio/index.html
@@ -34,7 +34,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlhatespeech/notebook/notebook.ipynb"><b>View
-                            Code</b></a>
+                            Notebook</b></a>
                 </p>
             </section>
             <section>
@@ -64,7 +64,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcloudaudit/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlvmaudit"><b>View Demo</b></a>
                 </p>
                 <p><img src="/mlportfolio/images/lstm.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -88,7 +88,8 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlcoffeeplantdiseases/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlcoffeeplantdiseases"><b>View
+                            Demo</b></a>
                 </p>
                 <p><img src="/mlportfolio/images/cnn.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -123,7 +124,7 @@
                 </p>
                 <p>
                     <a href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mltelecom/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mltelecom"><b>View Demo</b></a>
                 </p>
                 <p><img src="/mlportfolio/images/ann.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -155,7 +156,7 @@
                 <p>
                     <a
                         href="https://github.com/lyoh001/AzureStaticWebApps/blob/main/mlmaternalmortality/notebook/notebook.ipynb"><b>View
-                            Code</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
+                            Notebook</b></a>, <a href="https://www.lyoh001.com/mlmaternalmortality"><b>View Demo</b></a>
                 </p>
                 <p><img src="/mlportfolio/images/swa.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;"></p>
@@ -191,7 +192,7 @@
                 </p>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View Code</b></a>
+                    <a href="https://github.com/lyoh001/AzureVMAudit"><b>View GitHub</b></a>
                 </p>
                 <p><img src="/mlportfolio/images/etl.png"
                         style="max-width: 80%; height: auto; display: block; margin: 0 auto;">
@@ -217,7 +218,7 @@
                             alt="" /></a>
                 </p>
                 <p>
-                    <a href="https://github.com/lyoh001/AzureSecurityScore"><b>View Code</b></a>
+                    <a href="https://github.com/lyoh001/AzureSecurityScore"><b>View GitHub</b></a>
                 </p>
             </section>
         </article>
